# paotui

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/paotui/: __init__.py  agent.py  cli.py  config.py  events.py  models.py  prompts.py  server.py
src/paotui/tools/: __init__.py  fetch.py  files.py  search.py  shell.py  task.py
tests/: fakes.py  test_agent_contract.py  test_agent_smoke.py  test_cli.py  test_config.py  test_import.py  test_models.py  test_server.py  test_task_tool.py  test_tools_assembly.py  test_tools_fetch.py  test_tools_files.py  test_tools_search.py  test_tools_shell.py
