[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paotui"
version = "0.1.0"
description = "一个学生自制的轻量 agent 跑腿助手"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "langchain>=1.2,<1.3",
    "langchain-openai>=1.2,<2",
    "langgraph>=1.1,<2",
    "langgraph-checkpoint-sqlite>=3,<4",
    "ddgs>=9,<10",
    "httpx>=0.28",
    "trafilatura>=2",
    "pydantic>=2,<3",
    "pyyaml>=6",
    "python-dotenv>=1",
    "typer>=0.15",
    "rich>=13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2,<3",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=1,<2"]
tavily = ["tavily-python>=0.7"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "ruff>=0.8",
]

[project.scripts]
paotui = "paotui.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paotui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
